--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 dj-database-url==0.4.1
 Django==1.10.2
-gunicorn==19.6.0
-psycopg2==2.7
 whitenoise==3.2.2 
 PostgreSQL==14.0
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.11
+gunicorn==19.3.0
+psycopg2==2.6
+psycopg2==2.7
+SQLAlchemy==1.0.4
+requests==2.7.0
